# kite

./: .gitignore  Cargo.toml  README.md  TODO.md  ci.sh  kide-grammar.ebnf
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml
crates/kide/: Cargo.toml
crates/kide-cli/: Cargo.toml
crates/kide-cli/src/: lsp.rs  main.rs
crates/kide-core/: Cargo.toml  build.rs
crates/kide-core/src/: adapter_runtime.rs  formatter.rs  grammar_registry.rs  lib.rs  prisma_adapter.rs  rust_adapter.rs  scaffolder.rs  typescript_adapter.rs  wasm_adapter.rs
crates/kide-core/tests/: adapter_manifest_runtime.rs  validation.rs
crates/kide-parser/: Cargo.toml  build.rs
crates/kide-parser/src/: lib.rs
crates/kide-parser/src/grammar/: mod.rs
crates/kide-parser/tests/: grammar_edge_failures.rs  grammar_edge_success.rs  grammar_failures.rs  grammar_success.rs
crates/kide/src/: lib.rs
crates/kite/: Cargo.toml
crates/kite-cli/: Cargo.toml
crates/kite-cli/src/: lsp.rs  main.rs
crates/kite-core/: Cargo.toml
crates/kite-core/src/: adapter_runtime.rs  formatter.rs  grammar_registry.rs  lib.rs  scaffolder.rs  wasm_adapter.rs
crates/kite-core/tests/: adapter_manifest_runtime.rs  regressions.rs  validation.rs
crates/kite-parser/: Cargo.toml  build.rs
crates/kite-parser/src/: lib.rs
crates/kite-parser/src/grammar/: mod.rs
crates/kite-parser/tests/: grammar_edge_failures.rs  grammar_edge_success.rs  grammar_failures.rs  grammar_success.rs
crates/kite/src/: lib.rs
domain/: core.kide  core.kite  main.kide  tooling.kide  tooling.kite
examples/shipping-co/domain/: demos.kide  demos.kite  infra.kide  infra.kite  main.kide  main.kite
examples/shipping-co/domain/regressions/: expected-fail-arity-mismatch.kite  expected-fail-boundary-violation.kite  expected-fail-missing-symbol.kide  expected-fail-missing-symbol.kite  expected-pass-minimal.kide  expected-pass-minimal.kite
examples/shipping-co/prisma/: schema.prisma
examples/shipping-co/src/lib/: rpc.ts
examples/shipping-co/src/lib/demos/: arity_demo.ts  (+3 more)
examples/shipping-company/: Cargo.toml  main.kide
examples/shipping-company/src/domain/: order.rs
grammars/bash/: manifest.toml  tree-sitter-bash.wasm
grammars/bash/queries/: symbol_exists.scm
grammars/c_sharp/: manifest.toml
grammars/c_sharp/queries/: symbol_exists.scm
grammars/go/: manifest.toml  tree-sitter-go.wasm
grammars/go/queries/: symbol_exists.scm
grammars/json/: manifest.toml  tree-sitter-json.wasm
grammars/json/queries/: symbol_exists.scm
grammars/prisma/: manifest.toml  tree-sitter-prisma.wasm
grammars/prisma/queries/: symbol_exists.scm
grammars/python/: manifest.toml  tree-sitter-python.wasm
grammars/python/queries/: symbol_exists.scm
grammars/rust/: manifest.toml  tree-sitter-rust.wasm
grammars/rust/queries/: symbol_exists.scm
grammars/typescript/: manifest.toml
grammars/typescript/queries/: symbol_exists.scm
scripts/: build-native.sh  build-wasm-grammars.sh  build-wasm.sh  run-shipping-regressions.sh
shipping-co/domain/: main.kide
shipping-co/domain/regressions/: expected-fail-arity-mismatch.kide
vscode-kide/: package-lock.json  package.json  tsconfig.json
vscode-kide/src/: extension.ts
vscode-kide/syntaxes/: kide.tmLanguage.json
vscode-kite/: .vscode-test.mjs  language-configuration.json  package-lock.json  package.json
vscode-kite/src/: extension.ts
vscode-kite/src/test/fixtures/: outline.kite
vscode-kite/src/test/suite/: extension.test.ts
vscode-kite/syntaxes/: kite.tmLanguage.json
(+7 files in other folders)
