[workspace]
members = [
    "crates/kite",
    "crates/kite-cli",
    "crates/kite-core",
    "crates/kite-parser",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20.0"
toml = "0.8.20"
tree-sitter = { git = "https://github.com/jaboatman/tree-sitter", branch = "combined", features = ["wasm"] }
tempfile = "3.17.1"
rust-sitter = { git = "https://github.com/benbenbenbenbenben/krust-sitter" }

kite-core = { path = "crates/kite-core" }
kite-parser = { path = "crates/kite-parser" }
