[package]
name = "kide-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "kide"

[[bin]]
name = "kide"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
kide-core.workspace = true
kide-parser.workspace = true
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tower-lsp.workspace = true
