[package]
name = "kide-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
kide-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tree-sitter.workspace = true
rust-sitter.workspace = true
sha2 = "0.10.8"

[dev-dependencies]
tempfile.workspace = true
