[package]
name = "kide-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
rust-sitter = { git = "https://github.com/benbenbenbenbenben/krust-sitter" }

[build-dependencies]
rust-sitter-tool = { git = "https://github.com/benbenbenbenbenben/krust-sitter" }
serde_json = "1"
