[package]
name = "kite-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "kite"

[[bin]]
name = "kite"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
kite-core.workspace = true
kite-parser.workspace = true
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tower-lsp.workspace = true
